# illusTrace

./: .gitignore
cli/: CMakeLists.txt  cli.cpp  cli.h  main.cpp  view.cpp  view.h
cli/nalib/: CMakeLists.txt  NACString.c  NACString.h
core/: BezierPath.cpp  BezierPath.h  BezierSplineBuilder.cpp  BezierSplineBuilder.h  BezierVertex.h  BinaryThresholdFilter.cpp  BinaryThresholdFilter.h  BlurFilter.cpp  BlurFilter.h  BrightnessFilter.cpp  BrightnessFilter.h  CMakeLists.txt  CenterLineBuilder.cpp  CenterLineBuilder.h  Document.cpp  Document.h  EdgeFilter.cpp  EdgeFilter.h  Editor.cpp  Editor.h  FeatureDetector.cpp  FeatureDetector.h  Filter.cpp  Filter.h  GraphBuilder.cpp  GraphBuilder.h  Illustrace.cpp  Illustrace.h  Observable.h  Observer.h  PaintMaskBuilder.h  PolylineBuilder.cpp  PolylineBuilder.h  SVGWriter.cpp  SVGWriter.h  ThinningFilter.cpp  ThinningFilter.h  Util.h
core/ios/: PaintMaskBuilder.mm
core/osx/: PaintMaskBuilder.cpp
design/: illustTrace.sketch
filter/: BinaryThresholdFilter.cpp  BinaryThresholdFilter.h  BlurFilter.cpp  BlurFilter.h  BrightnessFilter.cpp  BrightnessFilter.h  CMakeLists.txt  EdgeFilter.cpp  EdgeFilter.h  Filter.h  NegativeFilter.cpp  NegativeFilter.h  ThinningFilter.cpp  ThinningFilter.h
ios/illusTrace/: AppDelegate.h  AppDelegate.m  CameraViewController.h  CameraViewController.mm  Define.h  DocumentObserver.h  DocumentViewController.h  DocumentViewController.mm  EditShapeColorViewController.h  EditShapeColorViewController.mm  EditShapeColorViewController.xib  EditShapeLineViewController.h  EditShapePencilViewController.mm  EditShapePencilViewController.xib  EditShapeViewController.xib  EditViewController.h  EditViewController.mm  EditViewController.xib  EditViewPreviewView.h  EditViewPreviewView.mm  EditorObderver.h  EditorObserver.h  EditorShapeColorViewController.h  EditorShapeColorViewController.mm  EditorShapeColorViewController.xib  EditorShapeEraserViewController.h  EditorShapeEraserViewController.mm  EditorShapeEraserViewController.xib  EditorShapeLineViewController.h  EditorShapeLineViewController.mm  EditorShapeLineViewController.xib  EditorShapePencilViewController.h  EditorShapePencilViewController.mm  EditorShapePencilViewController.xib  EditorShapeViewController.h  (+8 more)
ios/illusTrace.xcodeproj/: project.pbxproj
lib/: CMakeLists.txt  Log.cpp  Log.h  Observer.h  Vector2D.h
(+39 files in other folders)
